2001-10-14  Martin Weber  <martweb@gmx.net>

        * NEWS: Upated

	* README (version): Updated

	* THANKS: Updated.

	* autotrace.dsp (SOURCE): Update again.
	
2001-10-14  Martin Weber  <martweb@gmx.net>

	* autotrace.dsp: adopted to newer versions of ImageMagick. 

	* input-magick.c: Likewise.

2001-10-14  Martin Weber  <martweb@gmx.net>

	* output-dxf.h: changed wrong define constant
	* curve.c, pxl-outline.c, fit.c: removed warning in 
	notify_progress for Visual C++
	* output.c: added output_dxf_writer

2001-10-28  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (output_src): Added output-dxf.[ch].

2001-10-28  Steffen Politzky <support@durst.de>

	Logged by Masatake YAMATO  <yamato@redhat.com>.
	
	* output-dxf.[ch]: New files.

2001-10-14  Martin Weber  <martweb@gmx.net>

	* main.c (read_command_line::long_options): Added
	despeckle-level and despeckle-tightness.

2001-10-13  Masatake YAMATO  <yamato@redhat.com>

	* types.h (progress_func): New type.

	* pxl-outline.c: Added progress notify callback.
	* curve.[ch]: Likewise
	* autotrace.[ch]: Likewise.
	* fit.[ch]: Likewise.

	* autotrace.c (at_splines_new): Invoke despeckle.

	* autotrace.h (struct _at_fitting_opts_type): 
	New members, despeckle_level and despeckle_tightness.

	* fit.c (new_fitting_opts): Initialize
	despeckle_level and despeckle_tightness.

	* main.c (read_command_line): Use 
	fitting_opts->despeckle_tightness and
	fitting_opts->despeckle_level.

2001-10-11  Martin Weber  <martweb@gmx.net>

        * main.c, despeckle.c, despeckle.h: Added new despeckling code.

2001-10-12  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am: Added despeckle.[ch].

2001-10-12  David A. Bartold <???@???.???>

	 by Masatake)
	* despeckle.[ch]: New files.

2001-10-03 Jerritt Collord <collord@collord.net>

	* output-sk.c (out_splines): Check `at_centerline'
	before doing fputs("bC()\n", file).

	(Logged by Masatake)
	
o2001-09-18  Martin Weber  <martweb@gmx.net>
